littleAda_Compiler/parser.output
   0  $accept : %entry% $end

   1  main : definitions

   2  id : ID
   3     | ID_Q

   4  expr_seq : expr COMMA expr_seq
   5           | expr

   6  expr_interv : expr FROMTO expr

   7  expr : id
   8       | CSTDEC
   9       | CSTBASE
  10       | CSTSTR
  11       | LPAREN expr RPAREN
  12       | expr PLUS expr
  13       | expr MINUS expr
  14       | expr TIMES expr
  15       | expr DIV expr
  16       | expr EXPONENT expr
  17       | expr EQUALITY expr
  18       | expr INEQUALITY expr
  19       | expr LESSEQUAL expr
  20       | expr SUPEQUAL expr
  21       | expr LESSTHAN expr
  22       | expr SUPTHAN expr
  23       | expr MOD expr
  24       | expr REM expr
  25       | expr AND expr
  26       | expr OR expr
  27       | expr XOR expr
  28       | expr AND_THEN expr
  29       | expr OR_ELSE expr
  30       | MINUS expr
  31       | NOT expr
  32       | ABS expr
  33       | id LPAREN expr_seq RPAREN

  34  instr_seq : instr
  35            | instr_seq instr

  36  nom_boucle :
  37             | ID COLON

  38  elsif_seq : elseif
  39            | elsif_seq elseif

  40  elseif : ELSEIF expr THEN instr_seq

  41  condif : IF expr THEN instr_seq END_IF SEMICOLON
  42         | IF expr THEN instr_seq ELSE instr_seq END_IF SEMICOLON
  43         | IF expr THEN instr_seq elsif_seq END_IF SEMICOLON
  44         | IF expr THEN instr_seq elsif_seq ELSE instr_seq END_IF SEMICOLON

  45  exit_param : SEMICOLON
  46             | id SEMICOLON
  47             | WHEN expr SEMICOLON
  48             | id WHEN expr SEMICOLON

  49  ret : SEMICOLON
  50      | expr SEMICOLON

  51  expr_for : typeAda
  52           | expr_interv

  53  end_block : SEMICOLON
  54            | ID SEMICOLON

  55  instr : NULL SEMICOLON
  56        | RETIQUETTE id LETIQUETTE instr
  57        | id AFFECT expr SEMICOLON
  58        | id SEMICOLON
  59        | id LPAREN expr_seq RPAREN SEMICOLON
  60        | nom_boucle LOOP instr_seq END_LOOP end_block
  61        | nom_boucle WHILE expr LOOP instr_seq END_LOOP end_block
  62        | nom_boucle FOR ID IN expr_for LOOP instr_seq END_LOOP end_block
  63        | nom_boucle FOR ID IN REVERSE expr_for LOOP instr_seq END_LOOP end_block
  64        | condif
  65        | GOTO ID SEMICOLON
  66        | EXIT exit_param
  67        | RETURN ret

  68  id_seq : ID COMMA id_seq
  69         | ID

  70  typeAda : id
  71          | id RANGE expr_interv

  72  def :
  73      | AFFECT expr

  74  declaobj : id_seq COLON CONST def
  75           | id_seq COLON CONST typeAda def
  76           | id_seq COLON typeAda def

  77  mode :
  78       | IN
  79       | OUT
  80       | IN_OUT

  81  params :
  82         | LPAREN param_seq RPAREN

  83  param_seq : param
  84            | param_seq SEMICOLON param

  85  param : id_seq COLON mode id

  86  specifications : PROCED ID params
  87                 | FUNC ID params RETURN id

  88  block : BEGIN instr_seq END end_block

  89  decla_seq : decla
  90            | decla_seq decla

  91  definitions : specifications IS decla_seq block
  92              | specifications IS block

  93  decla : declaobj SEMICOLON
  94        | TYPE ID IS RANGE expr_interv SEMICOLON
  95        | SUBTYPE ID IS typeAda SEMICOLON
  96        | id_seq COLON typeAda RENAMES ID_Q SEMICOLON
  97        | specifications SEMICOLON
  98        | definitions

  99  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (99)

	PROCED  shift 3
	FUNC  shift 4
	.  error

	main  goto 5
	definitions  goto 6
	specifications  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	specifications : PROCED . ID params  (86)

	ID  shift 8
	.  error


state 4
	specifications : FUNC . ID params RETURN id  (87)

	ID  shift 9
	.  error


state 5
	%entry% : '\001' main .  (99)

	.  reduce 99


state 6
	main : definitions .  (1)

	.  reduce 1


state 7
	definitions : specifications . IS decla_seq block  (91)
	definitions : specifications . IS block  (92)

	IS  shift 10
	.  error


state 8
	specifications : PROCED ID . params  (86)
	params : .  (81)

	LPAREN  shift 11
	SEMICOLON  reduce 81
	IS  reduce 81

	params  goto 12


state 9
	specifications : FUNC ID . params RETURN id  (87)
	params : .  (81)

	LPAREN  shift 11
	RETURN  reduce 81

	params  goto 13


state 10
	definitions : specifications IS . decla_seq block  (91)
	definitions : specifications IS . block  (92)

	ID  shift 14
	TYPE  shift 15
	SUBTYPE  shift 16
	PROCED  shift 3
	FUNC  shift 4
	BEGIN  shift 17
	.  error

	definitions  goto 18
	id_seq  goto 19
	declaobj  goto 20
	specifications  goto 21
	block  goto 22
	decla_seq  goto 23
	decla  goto 24


state 11
	params : LPAREN . param_seq RPAREN  (82)

	ID  shift 14
	.  error

	id_seq  goto 25
	param_seq  goto 26
	param  goto 27


state 12
	specifications : PROCED ID params .  (86)

	.  reduce 86


state 13
	specifications : FUNC ID params . RETURN id  (87)

	RETURN  shift 28
	.  error


state 14
	id_seq : ID . COMMA id_seq  (68)
	id_seq : ID .  (69)

	COMMA  shift 29
	COLON  reduce 69


state 15
	decla : TYPE . ID IS RANGE expr_interv SEMICOLON  (94)

	ID  shift 30
	.  error


state 16
	decla : SUBTYPE . ID IS typeAda SEMICOLON  (95)

	ID  shift 31
	.  error


state 17
	block : BEGIN . instr_seq END end_block  (88)
	nom_boucle : .  (36)

	ID  shift 32
	ID_Q  shift 33
	RETIQUETTE  shift 34
	IF  shift 35
	GOTO  shift 36
	EXIT  shift 37
	RETURN  shift 38
	NULL  shift 39
	LOOP  reduce 36
	WHILE  reduce 36
	FOR  reduce 36

	id  goto 40
	instr_seq  goto 41
	instr  goto 42
	nom_boucle  goto 43
	condif  goto 44


state 18
	decla : definitions .  (98)

	.  reduce 98


state 19
	declaobj : id_seq . COLON CONST def  (74)
	declaobj : id_seq . COLON CONST typeAda def  (75)
	declaobj : id_seq . COLON typeAda def  (76)
	decla : id_seq . COLON typeAda RENAMES ID_Q SEMICOLON  (96)

	COLON  shift 45
	.  error


state 20
	decla : declaobj . SEMICOLON  (93)

	SEMICOLON  shift 46
	.  error


state 21
	definitions : specifications . IS decla_seq block  (91)
	definitions : specifications . IS block  (92)
	decla : specifications . SEMICOLON  (97)

	SEMICOLON  shift 47
	IS  shift 10
	.  error


state 22
	definitions : specifications IS block .  (92)

	.  reduce 92


state 23
	decla_seq : decla_seq . decla  (90)
	definitions : specifications IS decla_seq . block  (91)

	ID  shift 14
	TYPE  shift 15
	SUBTYPE  shift 16
	PROCED  shift 3
	FUNC  shift 4
	BEGIN  shift 17
	.  error

	definitions  goto 18
	id_seq  goto 19
	declaobj  goto 20
	specifications  goto 21
	block  goto 48
	decla  goto 49


state 24
	decla_seq : decla .  (89)

	.  reduce 89


state 25
	param : id_seq . COLON mode id  (85)

	COLON  shift 50
	.  error


state 26
	params : LPAREN param_seq . RPAREN  (82)
	param_seq : param_seq . SEMICOLON param  (84)

	RPAREN  shift 51
	SEMICOLON  shift 52
	.  error


state 27
	param_seq : param .  (83)

	.  reduce 83


state 28
	specifications : FUNC ID params RETURN . id  (87)

	ID  shift 53
	ID_Q  shift 33
	.  error

	id  goto 54


state 29
	id_seq : ID COMMA . id_seq  (68)

	ID  shift 14
	.  error

	id_seq  goto 55


state 30
	decla : TYPE ID . IS RANGE expr_interv SEMICOLON  (94)

	IS  shift 56
	.  error


state 31
	decla : SUBTYPE ID . IS typeAda SEMICOLON  (95)

	IS  shift 57
	.  error


state 32
	id : ID .  (2)
	nom_boucle : ID . COLON  (37)

	COLON  shift 58
	LPAREN  reduce 2
	SEMICOLON  reduce 2
	AFFECT  reduce 2


state 33
	id : ID_Q .  (3)

	.  reduce 3


state 34
	instr : RETIQUETTE . id LETIQUETTE instr  (56)

	ID  shift 53
	ID_Q  shift 33
	.  error

	id  goto 59


state 35
	condif : IF . expr THEN instr_seq END_IF SEMICOLON  (41)
	condif : IF . expr THEN instr_seq ELSE instr_seq END_IF SEMICOLON  (42)
	condif : IF . expr THEN instr_seq elsif_seq END_IF SEMICOLON  (43)
	condif : IF . expr THEN instr_seq elsif_seq ELSE instr_seq END_IF SEMICOLON  (44)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 68


state 36
	instr : GOTO . ID SEMICOLON  (65)

	ID  shift 69
	.  error


state 37
	instr : EXIT . exit_param  (66)

	ID  shift 53
	ID_Q  shift 33
	SEMICOLON  shift 70
	WHEN  shift 71
	.  error

	id  goto 72
	exit_param  goto 73


state 38
	instr : RETURN . ret  (67)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	SEMICOLON  shift 74
	.  error

	id  goto 67
	expr  goto 75
	ret  goto 76


state 39
	instr : NULL . SEMICOLON  (55)

	SEMICOLON  shift 77
	.  error


state 40
	instr : id . AFFECT expr SEMICOLON  (57)
	instr : id . SEMICOLON  (58)
	instr : id . LPAREN expr_seq RPAREN SEMICOLON  (59)

	LPAREN  shift 78
	SEMICOLON  shift 79
	AFFECT  shift 80
	.  error


state 41
	instr_seq : instr_seq . instr  (35)
	block : BEGIN instr_seq . END end_block  (88)
	nom_boucle : .  (36)

	ID  shift 32
	ID_Q  shift 33
	RETIQUETTE  shift 34
	IF  shift 35
	GOTO  shift 36
	EXIT  shift 37
	RETURN  shift 38
	END  shift 81
	NULL  shift 39
	LOOP  reduce 36
	WHILE  reduce 36
	FOR  reduce 36

	id  goto 40
	instr  goto 82
	nom_boucle  goto 43
	condif  goto 44


state 42
	instr_seq : instr .  (34)

	.  reduce 34


state 43
	instr : nom_boucle . LOOP instr_seq END_LOOP end_block  (60)
	instr : nom_boucle . WHILE expr LOOP instr_seq END_LOOP end_block  (61)
	instr : nom_boucle . FOR ID IN expr_for LOOP instr_seq END_LOOP end_block  (62)
	instr : nom_boucle . FOR ID IN REVERSE expr_for LOOP instr_seq END_LOOP end_block  (63)

	LOOP  shift 83
	WHILE  shift 84
	FOR  shift 85
	.  error


state 44
	instr : condif .  (64)

	.  reduce 64


state 45
	declaobj : id_seq COLON . CONST def  (74)
	declaobj : id_seq COLON . CONST typeAda def  (75)
	declaobj : id_seq COLON . typeAda def  (76)
	decla : id_seq COLON . typeAda RENAMES ID_Q SEMICOLON  (96)

	ID  shift 53
	ID_Q  shift 33
	CONST  shift 86
	.  error

	id  goto 87
	typeAda  goto 88


state 46
	decla : declaobj SEMICOLON .  (93)

	.  reduce 93


state 47
	decla : specifications SEMICOLON .  (97)

	.  reduce 97


state 48
	definitions : specifications IS decla_seq block .  (91)

	.  reduce 91


state 49
	decla_seq : decla_seq decla .  (90)

	.  reduce 90


state 50
	param : id_seq COLON . mode id  (85)
	mode : .  (77)

	IN  shift 89
	OUT  shift 90
	IN_OUT  shift 91
	ID  reduce 77
	ID_Q  reduce 77

	mode  goto 92


state 51
	params : LPAREN param_seq RPAREN .  (82)

	.  reduce 82


state 52
	param_seq : param_seq SEMICOLON . param  (84)

	ID  shift 14
	.  error

	id_seq  goto 25
	param  goto 93


state 53
	id : ID .  (2)

	.  reduce 2


state 54
	specifications : FUNC ID params RETURN id .  (87)

	.  reduce 87


state 55
	id_seq : ID COMMA id_seq .  (68)

	.  reduce 68


state 56
	decla : TYPE ID IS . RANGE expr_interv SEMICOLON  (94)

	RANGE  shift 94
	.  error


state 57
	decla : SUBTYPE ID IS . typeAda SEMICOLON  (95)

	ID  shift 53
	ID_Q  shift 33
	.  error

	id  goto 87
	typeAda  goto 95


state 58
	nom_boucle : ID COLON .  (37)

	.  reduce 37


state 59
	instr : RETIQUETTE id . LETIQUETTE instr  (56)

	LETIQUETTE  shift 96
	.  error


state 60
	expr : CSTDEC .  (8)

	.  reduce 8


state 61
	expr : CSTBASE .  (9)

	.  reduce 9


state 62
	expr : CSTSTR .  (10)

	.  reduce 10


state 63
	expr : MINUS . expr  (30)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 97


state 64
	expr : ABS . expr  (32)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 98


state 65
	expr : NOT . expr  (31)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 99


state 66
	expr : LPAREN . expr RPAREN  (11)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 100


state 67
	expr : id .  (7)
	expr : id . LPAREN expr_seq RPAREN  (33)

	LPAREN  shift 101
	PLUS  reduce 7
	MINUS  reduce 7
	TIMES  reduce 7
	DIV  reduce 7
	EXPONENT  reduce 7
	EQUALITY  reduce 7
	INEQUALITY  reduce 7
	LESSEQUAL  reduce 7
	SUPEQUAL  reduce 7
	LESSTHAN  reduce 7
	SUPTHAN  reduce 7
	MOD  reduce 7
	REM  reduce 7
	AND  reduce 7
	OR  reduce 7
	XOR  reduce 7
	AND_THEN  reduce 7
	OR_ELSE  reduce 7
	RPAREN  reduce 7
	COMMA  reduce 7
	SEMICOLON  reduce 7
	LOOP  reduce 7
	THEN  reduce 7
	AFFECT  reduce 7
	FROMTO  reduce 7
	RENAMES  reduce 7


state 68
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . EXPONENT expr  (16)
	expr : expr . EQUALITY expr  (17)
	expr : expr . INEQUALITY expr  (18)
	expr : expr . LESSEQUAL expr  (19)
	expr : expr . SUPEQUAL expr  (20)
	expr : expr . LESSTHAN expr  (21)
	expr : expr . SUPTHAN expr  (22)
	expr : expr . MOD expr  (23)
	expr : expr . REM expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)
	expr : expr . XOR expr  (27)
	expr : expr . AND_THEN expr  (28)
	expr : expr . OR_ELSE expr  (29)
	condif : IF expr . THEN instr_seq END_IF SEMICOLON  (41)
	condif : IF expr . THEN instr_seq ELSE instr_seq END_IF SEMICOLON  (42)
	condif : IF expr . THEN instr_seq elsif_seq END_IF SEMICOLON  (43)
	condif : IF expr . THEN instr_seq elsif_seq ELSE instr_seq END_IF SEMICOLON  (44)

	PLUS  shift 102
	MINUS  shift 103
	TIMES  shift 104
	DIV  shift 105
	EXPONENT  shift 106
	EQUALITY  shift 107
	INEQUALITY  shift 108
	LESSEQUAL  shift 109
	SUPEQUAL  shift 110
	LESSTHAN  shift 111
	SUPTHAN  shift 112
	MOD  shift 113
	REM  shift 114
	AND  shift 115
	OR  shift 116
	XOR  shift 117
	AND_THEN  shift 118
	OR_ELSE  shift 119
	THEN  shift 120
	.  error


state 69
	instr : GOTO ID . SEMICOLON  (65)

	SEMICOLON  shift 121
	.  error


state 70
	exit_param : SEMICOLON .  (45)

	.  reduce 45


state 71
	exit_param : WHEN . expr SEMICOLON  (47)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 122


state 72
	exit_param : id . SEMICOLON  (46)
	exit_param : id . WHEN expr SEMICOLON  (48)

	SEMICOLON  shift 123
	WHEN  shift 124
	.  error


state 73
	instr : EXIT exit_param .  (66)

	.  reduce 66


state 74
	ret : SEMICOLON .  (49)

	.  reduce 49


state 75
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . EXPONENT expr  (16)
	expr : expr . EQUALITY expr  (17)
	expr : expr . INEQUALITY expr  (18)
	expr : expr . LESSEQUAL expr  (19)
	expr : expr . SUPEQUAL expr  (20)
	expr : expr . LESSTHAN expr  (21)
	expr : expr . SUPTHAN expr  (22)
	expr : expr . MOD expr  (23)
	expr : expr . REM expr  (24)
	expr : expr . AND expr  (25)
	expr : expr . OR expr  (26)
	expr : expr . XOR expr  (27)
	expr : expr . AND_THEN expr  (28)
	expr : expr . OR_ELSE expr  (29)
	ret : expr . SEMICOLON  (50)

	PLUS  shift 102
	MINUS  shift 103
	TIMES  shift 104
	DIV  shift 105
	EXPONENT  shift 106
	EQUALITY  shift 107
	INEQUALITY  shift 108
	LESSEQUAL  shift 109
	SUPEQUAL  shift 110
	LESSTHAN  shift 111
	SUPTHAN  shift 112
	MOD  shift 113
	REM  shift 114
	AND  shift 115
	OR  shift 116
	XOR  shift 117
	AND_THEN  shift 118
	OR_ELSE  shift 119
	SEMICOLON  shift 125
	.  error


state 76
	instr : RETURN ret .  (67)

	.  reduce 67


state 77
	instr : NULL SEMICOLON .  (55)

	.  reduce 55


state 78
	instr : id LPAREN . expr_seq RPAREN SEMICOLON  (59)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr_seq  goto 126
	expr  goto 127


state 79
	instr : id SEMICOLON .  (58)

	.  reduce 58


state 80
	instr : id AFFECT . expr SEMICOLON  (57)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 128


state 81
	block : BEGIN instr_seq END . end_block  (88)

	ID  shift 129
	SEMICOLON  shift 130
	.  error

	end_block  goto 131


state 82
	instr_seq : instr_seq instr .  (35)

	.  reduce 35


state 83
	instr : nom_boucle LOOP . instr_seq END_LOOP end_block  (60)
	nom_boucle : .  (36)

	ID  shift 32
	ID_Q  shift 33
	RETIQUETTE  shift 34
	IF  shift 35
	GOTO  shift 36
	EXIT  shift 37
	RETURN  shift 38
	NULL  shift 39
	LOOP  reduce 36
	WHILE  reduce 36
	FOR  reduce 36

	id  goto 40
	instr_seq  goto 132
	instr  goto 42
	nom_boucle  goto 43
	condif  goto 44


state 84
	instr : nom_boucle WHILE . expr LOOP instr_seq END_LOOP end_block  (61)

	ID  shift 53
	ID_Q  shift 33
	CSTDEC  shift 60
	CSTBASE  shift 61
	CSTSTR  shift 62
	MINUS  shift 63
	ABS  shift 64
	NOT  shift 65
	LPAREN  shift 66
	.  error

	id  goto 67
	expr  goto 133

